--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <span>Categorías</span>
                         </div>
                         <ul class="nav">
-                            <li><a href="#tratamiento" data-send-url="">Quienes Somos</a></li>
+                            <li><a href="#tratamiento" data-send-url="">Nosotros</a></li>
                             <li><a href="#fragancias" data-send-url="">Servicios</a></li>
                             <li><a href="#maquillaje" data-send-url="">Proyectos</a></li>
                             <li><a href="#descubre" data-send-url="">Clientes</a></li>
@@ -288,6 +288,85 @@
         </section>
 
         <footer id="footer">
+            <div class="footer-principal container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="titulo" style="opacity: 0;">
+                            <h4>Logo</h4>
+                        </div>
+                        <ul>
+                            <li><a href="">Inicio</a></li>
+                            <li><a href="">Quienes Somos</a></li>
+                            <li><a href="">Servicios</a></li>
+                            <li><a href="">Proyectos</a></li>
+                            <li><a href="">Clientes</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="titulo">
+                            <h4>Contacto</h4>
+                        </div>
+                        <ul>
+                            <li>
+                                <i class="fa fa-map-o" aria-hidden="true"></i>
+                                <span>Av. test test #4578, Miraflores</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                <span>964335415 / 964335415</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                <span>info@areadigital.pe</span>
+                            </li>
+                        </ul>
+                        <ul class="redes-sociales">
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="titulo">
+                            <h4>Servicios</h4>
+                        </div>
+                        <ul>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="titulo" style="opacity: 0;">
+                            <h4>Servicios</h4>
+                        </div>
+                        <ul>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                            <li>
+                                <span>Servicio 1</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="content-footer">
                 <p><strong >AreaDigital.pe</strong> © 2021. Todos los Derechos Reservados.</p>
             </div>
